# shared-altsd

./: Cargo.toml  README.md  build.rs
proto/: shared_alts.proto
scripts/: generate_rotate_shared_alts_key
src/: config.rs  exchange.rs  main.rs  server.rs  setup.rs  test.rs  tlsa.rs
